change to github pages

--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,8 @@
       margin: 0;
     }
   </style>
+  <p style="font-size: 10px;text-align: center; padding: 20px;">Tabla periodica - By <a
+      href="https://github.com/yellyoshua" style="color: rgb(255, 0, 119);">Yoshua</a></p>
 </body>
 
 </html>
