add favicon and manifest

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,10 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <meta name="description" content="Tabla periodica antigua y actualizada, creada por Yoshua Lopez" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -22,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Tabla periodica - By Yoshua</title>
+  <title>Tabla periodica | Yoshua Lopez</title>
   <!-- The core Firebase JS SDK is always required and must be listed first -->
   <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
 
@@ -71,8 +70,8 @@
       margin: 0;
     }
   </style>
-  <p style="font-size: 10px;text-align: center; padding: 20px;">Tabla periodica - By <a
-      href="https://github.com/yellyoshua" style="color: rgb(255, 0, 119);">Yoshua</a></p>
+  <p style="font-size: 10px;text-align: center; padding: 20px;">Tabla periodica | <a href="https://www.yoshualopez.ml/"
+      style="color: rgb(255, 0, 119);">Yoshua Lopez</a></p>
 </body>
 
 </html>
