Add adsterra ads

--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
   <p style="font-size: 10px;text-align: center; padding: 20px;">Tabla periodica | <a href="https://yoshualopez.com/"
       style="color: rgb(255, 0, 119);">Yoshua Lopez</a></p>
 	<script type="module" src="src/index.tsx"></script>
+  <script type="text/javascript">
+    atOptions = {
+      'key' : '581bc6f1c9d1b4f0878742cab0cd1bae',
+      'format' : 'iframe',
+      'height' : 90,
+      'width' : 728,
+      'params' : {}
+    };
+    document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/581bc6f1c9d1b4f0878742cab0cd1bae/invoke.js"></scr' + 'ipt>');
+  </script>
 </body>
 
 </html>
