--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </script>
 </head>
 
-<body>
+<body style="text-align: center;">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
