--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Tabla periodica antigua y actualizada" />
+  <meta name="google-adsense-account" content="ca-pub-7465243281843526">
   <link rel="manifest" href="/manifest.json" />
   <title>Tabla periodica</title>
   <script type="text/javascript">
