Add google ads script

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     };
     document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/581bc6f1c9d1b4f0878742cab0cd1bae/invoke.js"></scr' + 'ipt>');
   </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7465243281843526" crossorigin="anonymous"></script>
 </body>
 
 </html>
